--- a/src/app/drop-down-choices/drop-down-choices.component.html
+++ b/src/app/drop-down-choices/drop-down-choices.component.html
@@ -1,7 +1,3 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
 <div class="container">
 	<div class="row">
 		<div class="col">
@@ -10,8 +6,8 @@
 				<div class="top">
 					<div class="wrapper">
 						<div class="mynav">
-							<a href="javascript:;"><span class="lnr lnr-chevron-left"></span></a>
-							<a href="javascript:;"><span class="lnr lnr-cog"></span></a>
+							<a href="javascript:"><span class="lnr lnr-chevron-left"></span></a>
+							<a href="javascript:"><span class="lnr lnr-cog"></span></a>
 						</div>
 						<h1 class="heading">تاریخ امروز</h1>
             <hr>
