--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,110 @@
   <title>Document</title>
 </head>
 <body>
-  <app-drop-down-choices></app-drop-down-choices>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" [routerLink]="['/']">خانه</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" [routerLink]="['drop-down/']" routerLinkActive="active"
+         [routerLinkActiveOptions]="{exact: true}">Drop-down <span class="sr-only">(مسئله ۱)</span></a>
+      <a class="nav-item nav-link" [routerLink]="['api/']" routerLinkActive="active">Api <span
+        class="sr-only">(مسئله ۲)</span></a>
+      <a class="nav-item nav-link" [routerLink]="['primeng/']" routerLinkActive="active">PrimeNg <span class="sr-only">(مسئله ۳)</span></a>
+      <a class="nav-item nav-link" [routerLink]="['about/']" routerLinkActive="active">درباره</a>
+      <a class="nav-item nav-link" [routerLink]="['not-found/']" routerLinkActive="active">404</a>
+    </div>
+  </div>
+</nav>
+
+<div class="container" style="margin-top: 30px;">
+  <router-outlet></router-outlet>
+</div>
+
+<div>
+  <footer class="text-center text-white" style="background-color: #3f51b5">
+    <div class="container">
+      <section class="mt-5">
+        <div class="row text-center d-flex justify-content-center pt-5">
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a [routerLink]="['about/']" class="text-white">در مورد ما</a>
+            </h6>
+          </div>
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!" class="text-white">محصولات</a>
+            </h6>
+          </div>
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!" class="text-white">جوایز</a>
+            </h6>
+          </div>
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!" class="text-white">راهنمایی</a>
+            </h6>
+          </div>
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!" class="text-white">ارتباط</a>
+            </h6>
+          </div>
+        </div>
+      </section>
+      <hr class="my-5"/>
+      <section class="mb-5">
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-8">
+            <p>
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و
+              متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و
+              کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده،
+              شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی
+              الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری
+              موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و
+              جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="text-center mb-5">
+        <a href="" class="text-white me-4">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="" class="text-white me-4">
+          <i class="fab fa-github"></i>
+        </a>
+      </section>
+    </div>
+    <div
+      class="text-center p-3"
+      style="background-color: rgba(0, 0, 0, 0.2);
+        direction: ltr"
+    >
+      © 2024 Copyright:
+      <a class="text-white" href="https://github.com/hadi0o"
+      >Github.com/Hadi0o</a
+      >
+    </div>
+  </footer>
+</div>
 </body>
 </html>
