--- a/src/app/drop-down-choices/drop-down-choices.component.css
+++ b/src/app/drop-down-choices/drop-down-choices.component.css
@@ -1,9 +1,10 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900");
 @import url("https://cdn.linearicons.com/free/1.0.0/icon-font.min.css");
+
 body {
-  font-family: 'Montserrat', sans-serif;
-  background: #112233;
+  font-family: 'vazir', Vazirmatn;
+  background: #dae0e3;
 }
+
 .weather-card {
   margin: 60px auto;
   height: 740px;
@@ -12,61 +13,56 @@ body {
   box-shadow: 0 1px 38px rgba(0, 0, 0, 0.15), 0 5px 12px rgba(0, 0, 0, 0.25);
   overflow: hidden;
 }
+
 .weather-card .top {
   position: relative;
   height: 570px;
   width: 100%;
   overflow: hidden;
-  background: url("https://s-media-cache-ak0.pinimg.com/564x/cf/1e/c4/cf1ec4b0c96e59657a46867a91bb0d1e.jpg") no-repeat;
   background-size: cover;
   background-position: center center;
   text-align: center;
 }
+
 .weather-card .top .wrapper {
   padding: 30px;
   position: relative;
   z-index: 1;
 }
+
 .weather-card .top .wrapper .mynav {
   height: 20px;
 }
+
 .weather-card .top .wrapper .mynav .lnr {
   color: #fff;
   font-size: 20px;
 }
+
 .weather-card .top .wrapper .mynav .lnr-chevron-left {
   display: inline-block;
   float: left;
 }
+
 .weather-card .top .wrapper .mynav .lnr-cog {
   display: inline-block;
   float: right;
 }
+
 .weather-card .top .wrapper .heading {
   margin-top: 20px;
   font-size: 35px;
   font-weight: 400;
   color: #fff;
 }
-.weather-card .top .wrapper .location {
-  margin-top: 20px;
-  font-size: 21px;
-  font-weight: 400;
-  color: #fff;
-}
-.weather-card .top .wrapper .temp {
-  margin-top: 20px;
-}
-.weather-card .top .wrapper .temp a {
-  text-decoration: none;
-  color: #fff;
-}
+
 .weather-card .top .wrapper .temp .temp-value {
   display: inline-block;
   font-size: 35px;
   font-weight: 600;
   color: #fff;
 }
+
 .weather-card .top .wrapper .temp {
   display: inline-block;
   font-size: 35px;
@@ -75,6 +71,7 @@ body {
   vertical-align: top;
   margin-top: 10px;
 }
+
 .weather-card .top:after {
   content: "";
   height: 100%;
@@ -85,8 +82,9 @@ body {
   left: 0;
   background: rgba(0, 0, 0, 0.5);
 }
+
 .weather-card .bottom {
-  padding: 0 30px;
+  padding: 10px 107px;
   background: #fff;
 }
 
@@ -98,12 +96,14 @@ body {
   line-height: 1em;
   margin-top: 25px;
   margin-left: 90px;
-  text-align: center;
 }
+
 .weather-card.rain .top {
   background: url("http://img.freepik.com/free-vector/girl-with-umbrella_1325-5.jpg?size=338&ext=jpg") no-repeat;
   background-size: cover;
   background-position: center center;
 }
 
-
+.dropdown-menu .dropdown-item {
+  text-align: center;
+}
